# ChangeLog for app-office/abiword-plugins
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/abiword-plugins/Attic/ChangeLog,v 1.47 2008/06/11 10:03:37 armin76 Exp $

  11 Jun 2008; Raúl Porcel <armin76@gentoo.org>
  abiword-plugins-2.6.3.ebuild:
  alpha/ia64/sparc stable wrt #225395

  10 Jun 2008; Brent Baude <ranger@gentoo.org> abiword-plugins-2.6.3.ebuild:
  Marking abiword-plugins-2.6.3 ppc & ppc64 stable for bug 225395

  09 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  abiword-plugins-2.6.3.ebuild:
  stable x86, bug 225395

  18 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -abiword-plugins-2.6.0.ebuild, abiword-plugins-2.6.2.ebuild,
  abiword-plugins-2.6.3.ebuild:
  move jabber use_enable back to general myconf, bug #221823.

*abiword-plugins-2.6.3 (04 May 2008)

  04 May 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +abiword-plugins-2.6.3.ebuild:
  bump to 2.6.3. Crash fixes.

*abiword-plugins-2.6.2 (10 Apr 2008)

  10 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +abiword-plugins-2.6.2.ebuild:
  bump to 2.6.2. Bug fixes. Close bug #216874.

  05 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  abiword-plugins-2.4.6.ebuild, abiword-plugins-2.6.0.ebuild:
  use slotted goffice, bug #216329. Fix openxml plugin build issues,
  bug #216245. Fix ots dep for 2.4.6, bug #210253.

  03 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  abiword-plugins-2.6.0.ebuild:
  fix stupid SRC_URI problem, abiword-plugins still needs abiword sources

*abiword-plugins-2.6.0 (03 Apr 2008)

  03 Apr 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +abiword-plugins-2.6.0.ebuild:
  bump to 2.6.0

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing joem from metadata.xml as per #69387.

  19 Oct 2007; <jeff@gentoo.org> abiword-plugins-2.4.6.ebuild:
  Reverting the change as this appears fine with goffice-0.4.
