@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/abiword-plugins/Attic/abiword-plugins-2.6.3.ebuild,v 1.5 2008/06/11 10:03:37 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/abiword-plugins/Attic/abiword-plugins-2.6.3.ebuild,v 1.6 2008/06/11 19:51:52 ken69267 Exp $
 
 EAPI="1"
 
@@ -13,7 +13,7 @@ SRC_URI="http://www.abisource.com/downloads/abiword/${PV}/source/${P}.tar.gz
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="alpha ~amd64 ~hppa ia64 ppc ppc64 sparc x86"
+KEYWORDS="alpha amd64 ~hppa ia64 ppc ppc64 sparc x86"
 IUSE="cxx debug gnome grammar jabber jpeg libgda math ots pdf readline svg thesaurus wmf wordperfect"
 
 # FIXME: add asio support (better wait on boost 1.35)
