@@ -1,6 +1,9 @@
 # ChangeLog for app-office/abiword
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/abiword/ChangeLog,v 1.193 2008/06/11 10:00:10 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/abiword/ChangeLog,v 1.194 2008/06/11 19:50:08 ken69267 Exp $
+
+  11 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> abiword-2.6.3.ebuild:
+  amd64 stable, bug #225395
 
   11 Jun 2008; Raúl Porcel <armin76@gentoo.org> abiword-2.6.3.ebuild:
   alpha/ia64/sparc stable wrt #225395
