@@ -1,6 +1,10 @@
 # ChangeLog for app-office/abiword-plugins
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/abiword-plugins/Attic/ChangeLog,v 1.47 2008/06/11 10:03:37 armin76 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-office/cvs-repo/gentoo-x86/app-office/abiword-plugins/Attic/ChangeLog,v 1.48 2008/06/11 19:51:52 ken69267 Exp $
+
+  11 Jun 2008; Kenneth Prugh <ken69267@gentoo.org>
+  abiword-plugins-2.6.3.ebuild:
+  amd64 stable, bug #225395
 
   11 Jun 2008; Raúl Porcel <armin76@gentoo.org>
   abiword-plugins-2.6.3.ebuild:
